@@ -4,6 +4,9 @@
 
 @section v2_10 Changes with libapreq2-2.10 (under developement)
 
+- Perl Glue Build [Philip M. Gollucci]
+  config.status format changed format yet again in autoconf 2.62+.
+
 - License [Mladen Turk]
   Add libapreq.rc and generate libapreq.res
 
